--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
+    "react-test-renderer": "^18.1.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "uuid": "^8.3.2",
